Made a separate directory

--- a/MPINET/MPIDIST/Makefile
+++ b/MPINET/MPIDIST/Makefile
@@ -2,12 +2,12 @@
 
 ### Defaults
 CPP=g++
-# parallel_src=./MPINET
+# parallel_src=./MPINET/MPIDIST
 CFLAGS=-std=c++11 -Wall
 
 ### Optional settings based on MAKECMDGOALS
 .PHONY: mpi
-mpi:  mpinet
+mpi:  mpidistrib
 ifneq ($(filter mpi, $(MAKECMDGOALS) ),)
 CPP:=mpiCC
 LD:=mpiCC
@@ -15,9 +15,9 @@ CFLAGS += -Denv_mpi
 endif
 
 ### Rules
-mpinet: mpinet.hpp parallel.hpp
-	$(CPP) $(CFLAGS) -c mpinet.cpp -o mpinet.o
-	$(CPP) $(CFLAGS) mpinet.o -o mpinet
+mpidistrib: ../parallel.hpp
+	$(CPP) $(CFLAGS) -c mpidistrib.cpp -o mpidistrib.o
+	$(CPP) $(CFLAGS) mpidistrib.o -o mpidistrib
 	@echo "Compiled successfully"
 
 clean:
