--- a/JapetusML/Makefile
+++ b/JapetusML/Makefile
@@ -1,26 +1,23 @@
-japetus_test.exe: japetus_test.o Graph.o Scope.o Functor.o FunctorImpl.o Functions.o Session.o
-	g++ build/Graph.o build/Scope.o build/Functor.o build/FunctorImpl.o build/Functions.o build/Session.o build/japetus_test.o -o japetus_test.exe
+japetus_test.exe: japetus_test.o Graph.o Scope.o Functor.o FunctorImpl.o Session.o
+	g++ build/Graph.o build/Scope.o build/Functor.o build/FunctorImpl.o build/Session.o build/japetus_test.o -o japetus_test.exe
 
 japetus_test.o: dir_build
-	g++ -fdiagnostics-color -c -g src/japetus_test.cpp -o build/japetus_test.o -std=c++11
+	g++ -c -g src/japetus_test.cpp -o build/japetus_test.o -std=c++11 2> log1.txt
 
 Graph.o: dir_build
-	g++ -fdiagnostics-color -c -g src/Graph.cpp -o build/Graph.o -std=c++11
+	g++ -c -g src/Graph.cpp -o build/Graph.o -std=c++11 2> log2.txt
 
 Scope.o: dir_build
-	g++ -fdiagnostics-color -c -g src/Scope.cpp -o build/Scope.o -std=c++11
+	g++ -c -g src/Scope.cpp -o build/Scope.o -std=c++11 2> log3.txt
 
 Functor.o: dir_build
-	g++ -fdiagnostics-color -c -g src/Functor.cpp -o build/Functor.o -std=c++11
+	g++ -c -g src/Functor.cpp -o build/Functor.o -std=c++11 2> log4.txt
 
 FunctorImpl.o: dir_build
-	g++ -fdiagnostics-color -c -g src/FunctorImpl.cpp -o build/FunctorImpl.o -std=c++11
-
-Functions.o: dir_build
-	g++ -fdiagnostics-color -c -g src/Functions.cpp -o build/Functions.o -std=c++11
+	g++ -c -g src/FunctorImpl.cpp -o build/FunctorImpl.o -std=c++11 2> log5.txt
 
 Session.o: dir_build
-	g++ -fdiagnostics-color -c -g src/Session.cpp -o build/Session.o -std=c++11
+	g++ -c -g src/Session.cpp -o build/Session.o -std=c++11 2> log6.txt
 
 dir_build:
 	mkdir -p build
